--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "appinfo-vdf"
-version = "0.1.0"
-authors = ["Pedro Rodrigues"]
+version = "0.2.0"
+authors = [
+    "Pedro Rodrigues",
+    "David Manca<1900179+medzernik@users.noreply.github.com>",
+]
 edition = "2021"
 
 [dependencies]
-serde = {version = "1.0", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
